--- a/cotton.html
+++ b/cotton.html
@@ -159,7 +159,7 @@
         <div id="controls">
             <div class="controls-wrapper">
                 <div class="control-group title">
-                    <h2>Cotton Candy Font</h2>
+                    <h2>솜사탕 폰트</h2>
                 </div>
                 
                 <div class="control-group">
