--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="experiment-card" onclick="window.location.href='/connection.html'">
                 <div class="card-image">
                     <span class="experiment-number">02</span>
-                    <img src="/Frame 22.png" alt="Typography Connections" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                    <img src="/5.gif" alt="Typography Connections" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                     <span class="placeholder" style="display:none;"></span>
                 </div>
                 <div class="card-content">
